0.04 - Sat Jun 4 2011
	- moved all logic from script to module
	- enabled script to process more than one module at one run

0.03 - Mon Nov 11 2010
	- more precise messages

0.02 - Fri Jul 9 2010
	- --help (-h) option added
	- print $AUTHORITY if defined

0.01 - Thu Jul 8 2010
	- first release