@@ -7,12 +7,10 @@ DESCRIPTION
         perl -MLong::Module::Name -le'print Long::Module::Name->VERSION'
 
 SYNOPSIS
-        mver Module::Name
-
-        mver Module-Name
+        mver Module::Name1 Module-Name2 Module::NameN
 
 AUTHOR
-    Алексей Суриков <ksuri@cpan.org>
+    Alexey Surikov <ksuri@cpan.org>
 
 LICENSE
     This program is free software, you can redistribute it under the same
