@@ -1,6 +1,7 @@
 0.04 - Sat Jun 4 2011
 	- moved all logic from script to module
 	- enabled script to process more than one module at one run
+	- utilize Module::CoreList when available
 
 0.03 - Mon Nov 11 2010
 	- more precise messages
